Lab3 Task2 has been completed

--- a/app/src/main/res/values-be-rBY/strings.xml
+++ b/app/src/main/res/values-be-rBY/strings.xml
@@ -13,5 +13,6 @@
     <string name="text_site">сайт</string>
     <string name="text_theater">тэатр</string>
     <string name="text_troupe">трупа</string>
+    <string name="toolbar_text">тэатры Кірава</string>
 
 </resources>
