--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -13,6 +13,7 @@
     <string name="text_site">website</string>
     <string name="text_theater">theater</string>
     <string name="text_troupe">troupe</string>
+    <string name="toolbar_text">theatres of Kirov</string>
 
 
 </resources>
